--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -70,9 +70,8 @@ AC_PROG_CXX
 
 AC_COMPILER_NAME
 
-if test "x$CCNAM" != "xgcc44" ; then
-AX_CXX_COMPILE_STDCXX_11([ext],[optional])
-fi
+# We need a C++11 compiler now - AB 2014-12-12
+AX_CXX_COMPILE_STDCXX_11([],[mandatory])
 
 AC_SUBST([DEFAULT_CFLAGS])
 AC_SUBST([DEBUG_CFLAGS])
