--- a/fflas-ffpack-config.in
+++ b/fflas-ffpack-config.in
@@ -102,6 +102,10 @@ while test $# -gt 0; do
 			echo -I${includedir} @CBLAS_FLAG@ @AVXFLAGS@ @GIVARO_CFLAGS@ # @PARFLAGS@ # @CUDA_CFLAGS@
 			;;
 
+		--cflags-full)
+			 echo -I${includedir} @CBLAS_FLAG@ @AVXFLAGS@ @CXXFLAGS@  @GIVARO_CFLAGS@  # @PARFLAGS@ # @CUDA_CFLAGS@
+			 ;;
+
 		--blas-cflags)
 			echo -I${includedir} @CBLAS_FLAG@  @AVXFLAGS@ # @PARFLAGS@ # @CUDA_CFLAGS@
 			;;
