--- a/trunk/fflas-ffpack/fflas/fflas_sparse/sell/Makefile
+++ b/trunk/fflas-ffpack/fflas/fflas_sparse/sell/Makefile
@@ -99,8 +99,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-apple-darwin14.0.0
-host_triplet = x86_64-apple-darwin14.0.0
+build_triplet = x86_64-unknown-linux-gnu
+host_triplet = x86_64-unknown-linux-gnu
 subdir = fflas-ffpack/fflas/fflas_sparse/sell
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(pkgincludesub_HEADERS)
@@ -199,44 +199,44 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Users/vialla/work/software/fflas-ffpack/build-aux/missing aclocal-1.14 -I macros
+ACLOCAL = ${SHELL} /home/vialla/work/lib/fflas-ffpack/build-aux/missing aclocal-1.14 -I macros
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /Users/vialla/work/software/fflas-ffpack/build-aux/missing autoconf
-AUTOHEADER = ${SHELL} /Users/vialla/work/software/fflas-ffpack/build-aux/missing autoheader
-AUTOMAKE = ${SHELL} /Users/vialla/work/software/fflas-ffpack/build-aux/missing automake-1.14
+AUTOCONF = ${SHELL} /home/vialla/work/lib/fflas-ffpack/build-aux/missing autoconf
+AUTOHEADER = ${SHELL} /home/vialla/work/lib/fflas-ffpack/build-aux/missing autoheader
+AUTOMAKE = ${SHELL} /home/vialla/work/lib/fflas-ffpack/build-aux/missing automake-1.14
 AVXFLAGS = -msse4.1 -mavx -fabi-version=6
-AWK = awk
+AWK = gawk
 BLAS_FOUND = true
 BLAS_VENDOR = USER
-CBLAS_FLAG = -I/Users/vialla/work/software/build/include/ -D__FFLASFFPACK_HAVE_CBLAS
-CBLAS_LIBS = -L/Users/vialla/work/software/build/lib/ -lopenblas
+CBLAS_FLAG = -I/home/vialla/work/lib/build/include/ -D__FFLASFFPACK_HAVE_CBLAS
+CBLAS_LIBS = -L/home/vialla/work/lib/build/lib/ -lopenblas
 CC = gcc
 CCNAM = gcc48
 CFLAGS = -g -O2
 CPPFLAGS = 
 CXX = g++
 CXXCPP = g++ -E
-CXXFLAGS = -Wa,-q -std=gnu++11
+CXXFLAGS =  -std=gnu++11
 CYGPATH_W = echo
 DBG = no
 DEBUG_CFLAGS = -g -DNDEBUG -UFFLASFFPACK_DEBUG -UFFLASFFPACK_DEBUG
 DEFAULT_CFLAGS = -O2   -Wall -g -DNDEBUG -UFFLASFFPACK_DEBUG -UFFLASFFPACK_DEBUG
 DEFS = -DHAVE_CONFIG_H
 DLLTOOL = false
-DSYMUTIL = dsymutil
+DSYMUTIL = 
 DUMPBIN = 
-ECHO_C = \c
-ECHO_N = 
+ECHO_C = 
+ECHO_N = -n
 ECHO_T = 
-EGREP = /usr/bin/grep -E
+EGREP = /bin/grep -E
 EXEEXT = 
-FFLASFFPACK_DOC_PATH = /Users/vialla/work/software/build/docs
-FGREP = /usr/bin/grep -F
-GIVARO_CFLAGS = -I/Users/vialla/work/software/build/include -I/Users/vialla/work/software/build//include
-GIVARO_LIBS = -L/Users/vialla/work/software/build/lib -lgivaro -L/Users/vialla/work/software/build//lib -lgmpxx -lgmp
-GREP = /usr/bin/grep
+FFLASFFPACK_DOC_PATH = /home/vialla/work/lib/build/docs
+FGREP = /bin/grep -F
+GIVARO_CFLAGS = -I/home/vialla/work/lib/build/include -I/home/vialla/work/lib/build/include
+GIVARO_LIBS = -L/home/vialla/work/lib/build/lib -lgivaro -L/home/vialla/work/lib/build/lib -lgmpxx -lgmp
+GREP = /bin/grep
 HAVE_CXX11 = 1
 INSTALL = /usr/bin/install -c
 INSTALL_DATA = ${INSTALL} -m 644
@@ -244,25 +244,25 @@ INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LAPACK_LIBS = 
-LD = /usr/bin/ld
+LD = /usr/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBOBJS = 
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
-LIPO = lipo
+LIPO = 
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = 
-MAKEINFO = ${SHELL} /Users/vialla/work/software/fflas-ffpack/build-aux/missing makeinfo
+MAKEINFO = ${SHELL} /home/vialla/work/lib/fflas-ffpack/build-aux/missing makeinfo
 MANIFEST_TOOL = :
-MKDIR_P = ../../../../build-aux/install-sh -c -d
-NM = /usr/bin/nm
-NMEDIT = nmedit
-OBJDUMP = false
+MKDIR_P = /bin/mkdir -p
+NM = /usr/bin/nm -B
+NMEDIT = 
+OBJDUMP = objdump
 OBJEXT = o
 OMPFLAGS = -fopenmp
-OTOOL = otool
-OTOOL64 = :
+OTOOL = 
+OTOOL64 = 
 PACKAGE = fflas-ffpack
 PACKAGE_BUGREPORT = ffpack-devel@googlegroups.com
 PACKAGE_NAME = FFLAS-FFPACK
@@ -276,18 +276,18 @@ PATH_SEPARATOR = :
 PROF = no
 RANLIB = ranlib
 RM = /bin/rm -f
-SED = /usr/bin/sed
+SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/sh
+SHELL = /bin/bash
 SSEFLAGS = -msse4.1
 STRIP = strip
 TESTS_CFLAGS = -O0 -Wall -g -DNDEBUG -UFFLASFFPACK_DEBUG -UFFLASFFPACK_DEBUG
 VERSION = 2.1.0
 WARN = no
-abs_builddir = /Users/vialla/work/software/fflas-ffpack/fflas-ffpack/fflas/fflas_sparse/sell
-abs_srcdir = /Users/vialla/work/software/fflas-ffpack/fflas-ffpack/fflas/fflas_sparse/sell
-abs_top_builddir = /Users/vialla/work/software/fflas-ffpack
-abs_top_srcdir = /Users/vialla/work/software/fflas-ffpack
+abs_builddir = /home/vialla/work/lib/fflas-ffpack/fflas-ffpack/fflas/fflas_sparse/sell
+abs_srcdir = /home/vialla/work/lib/fflas-ffpack/fflas-ffpack/fflas/fflas_sparse/sell
+abs_top_builddir = /home/vialla/work/lib/fflas-ffpack
+abs_top_srcdir = /home/vialla/work/lib/fflas-ffpack
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -296,26 +296,26 @@ am__leading_dot = .
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-apple-darwin14.0.0
+build = x86_64-unknown-linux-gnu
 build_alias = 
 build_cpu = x86_64
-build_os = darwin14.0.0
-build_vendor = apple
+build_os = linux-gnu
+build_vendor = unknown
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-apple-darwin14.0.0
+host = x86_64-unknown-linux-gnu
 host_alias = 
 host_cpu = x86_64
-host_os = darwin14.0.0
-host_vendor = apple
+host_os = linux-gnu
+host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Users/vialla/work/software/fflas-ffpack/build-aux/install-sh
+install_sh = ${SHELL} /home/vialla/work/lib/fflas-ffpack/build-aux/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -324,7 +324,7 @@ mandir = ${datarootdir}/man
 mkdir_p = $(MKDIR_P)
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /Users/vialla/work/software/build
+prefix = /home/vialla/work/lib/build
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
