--- a/trunk/fflas-ffpack/fflas/fflas_sparse/Makefile.am
+++ b/trunk/fflas-ffpack/fflas/fflas_sparse/Makefile.am
@@ -29,6 +29,7 @@ SUBDIRS=coo csr csr_hyb ell ell_simd hyb_zo sell
 
 
 pkgincludesub_HEADERS=            \
+        utils.h \
         coo.h  \
 	    csr.h  \
 	    ell.h  \
