--- a/fflas-ffpack/field/Makefile.am
+++ b/fflas-ffpack/field/Makefile.am
@@ -25,6 +25,7 @@
 pkgincludesubdir=$(pkgincludedir)/field
 
 RNS=rns.h			        \
+	rns.inl				\
 	rns-double.h			\
 	rns-double-elt.h		\
 	rns-double.inl			\
