--- a/trunk/fflas-ffpack/fflas/fflas_sparse/Makefile.am
+++ b/trunk/fflas-ffpack/fflas/fflas_sparse/Makefile.am
@@ -30,6 +30,7 @@ SUBDIRS=coo csr csr_hyb ell ell_simd hyb_zo sell
 
 pkgincludesub_HEADERS=            \
         sparse_matrix_traits.h \
+	read_sparse.h \
         utils.h \
         coo.h  \
 	    csr.h  \
